--- a/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePageN4.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePageN4.xaml
@@ -18,52 +18,41 @@
       </Frame>
     </Frame>
 
-    <Grid x:Name="grid_multiple_choice">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="1*" />
-        <RowDefinition Height="1*" />
-      </Grid.RowDefinitions>
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="1*" />
-        <ColumnDefinition Width="1*" />
-      </Grid.ColumnDefinitions>
-
-
-
+    <Grid VerticalOptions="FillAndExpand">
       <Frame Style="{StaticResource AnswerButtonFrame}"
-             Grid.Row="0" Grid.Column="0">
+             Grid.Column="0">
         <Button x:Name="btn_choice1"
                 AutomationId="auto_btn_choice1"
                 Text="*"
                 Style="{StaticResource MultipleChoiceButtonStyle}"/>
       </Frame>
-
-
       <Frame Style="{StaticResource AnswerButtonFrame}"
-             Grid.Row="0" Grid.Column="1">
+             Grid.Column="1">
         <Button x:Name="btn_choice2"
                 AutomationId="auto_btn_choice2"
                 Text="*"
                 Style="{StaticResource MultipleChoiceButtonStyle}"/>
       </Frame>
+    </Grid>
+
+
+    <Grid VerticalOptions="FillAndExpand">
 
       <Frame Style="{StaticResource AnswerButtonFrame}"
-             Grid.Row="1" Grid.Column="0">
+              Grid.Column="0">
         <Button x:Name="btn_choice3"
                 AutomationId="auto_btn_choice3"
                 Text="*"
                 Style="{StaticResource MultipleChoiceButtonStyle}"/>
       </Frame>
 
-
       <Frame Style="{StaticResource AnswerButtonFrame}"
-             Grid.Row="1" Grid.Column="1">
+              Grid.Column="1">
         <Button x:Name="btn_choice4"
                 AutomationId="auto_btn_choice4"
                 Text="*"
                 Style="{StaticResource MultipleChoiceButtonStyle}"/>
       </Frame>
-
     </Grid>
 
 
