Spelling Fix and change "Sample" to "Preferences" in Settings Page

--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/JLPTN4SelectorPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/JLPTN4SelectorPage.xaml
@@ -41,7 +41,7 @@
         </StackLayout>
         <StackLayout>
           <Label  Style="{StaticResource CustomButtonLabel}"
-                  Text="Gramatical Achievement"/>
+                  Text="Grammatical Achievement"/>
           <!--  <===== Edit the label -->
         </StackLayout>
       </Grid>
