--- a/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/SettingsPage.xaml
@@ -9,7 +9,7 @@
   <StackLayout Padding="20">
     <StackLayout Orientation="Horizontal"
                  HorizontalOptions="StartAndExpand">
-      <Label Text="Sample"
+      <Label Text="Preferences"
              HorizontalOptions="EndAndExpand" />
     </StackLayout>
     <StackLayout Orientation="Horizontal"
