--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Daijoubu.SideMenuItems"
-             BackgroundColor="#cccccc"
-             Padding="0,50,0,0">
+             x:Class="Daijoubu.SideMenuItems">
 
   <Grid>
     <Grid.ColumnDefinitions>
