--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Daijoubu"
              x:Class="Daijoubu.MainPage"
-             Title="Daijoubu"
+             Title="Gambaru"
              BackgroundColor="#c2c2c2">
 
   <StackLayout Orientation="Vertical">
@@ -23,7 +23,7 @@
       </StackLayout>
       <StackLayout>
         <Label x:Name="label_homepage_header"
-               Text="だいじょうぶ"
+               Text="がんばる"
                TextColor="#dfdfdf"
                FontAttributes="Bold"
                HorizontalOptions="Center"
